--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "autoprefixer": "^10.4.13",
     "eslint-config-next": "^13.0.7",
     "postcss": "^8.4.20",
