--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.13",
     "eslint-config-next": "^13.0.7",
     "postcss": "^8.4.20",
+    "supabase": "^1.29.1",
     "tailwindcss": "^3.2.4"
   }
 }
