--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@types/react-dom": "18.0.9",
     "clsx": "^1.2.1",
     "eslint": "8.30.0",
+    "gray-matter": "^4.0.3",
     "next": "^13.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
