--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": "src"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/types/supabase.types"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/types/supabase.types", "components-tldr/Card.jsx"],
   "exclude": ["node_modules"]
 }
 
