--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,23 @@
+
 {
-  "extends": "next/core-web-vitals",
+  "extends": [
+    "eslint:recommended",
+    "plugin:prettier/recommended",
+    "plugin:tailwindcss/recommended",
+    "next/core-web-vitals"
+  ],
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {
     "react/no-unescaped-entities": "off"
-  }
+  },
+  "plugins": ["tailwindcss"]
 }
