--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,10 @@
     }
   },
   "rules": {
-    "react/no-unescaped-entities": "off"
+    "react/no-unescaped-entities": "off",
+    "no-unused-vars" : "off",
+    "no-undef" : "off",
+    "no-empty" : "off"
   },
   "plugins": ["tailwindcss"]
 }
