--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "clsx": "^1.2.1",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "formik": "^2.2.9",
     "gray-matter": "^4.0.3",
     "next": "^13.0.7",
