--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.0.7",
     "@supabase/supabase-js": "^2.2.3",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
