--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "formik": "^2.2.9",
     "gray-matter": "^4.0.3",
+    "gsap": "^3.11.4",
     "next": "^13.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
+    "split-type": "^0.3.3",
     "typescript": "4.9.4"
   },
   "devDependencies": {
